# ITLab-Vision-deeplab

./: CMakeLists.txt  ExecutionGuide.md  INSTALL.md  InstallationGuide.md  LICENSE  README.md
CMakeScripts/: FindAtlas.cmake  FindGFlags.cmake  FindGlog.cmake  FindHDF5.cmake  FindLMDB.cmake  FindMATIO.cmake
cmake/: Dependencies.cmake
densecrf/: CMakeLists.txt  Makefile  README.md
densecrf/libDenseCRF/: CMakeLists.txt
densecrf/my_script/: GetDenseCRFResult.m
densecrf/refine_pascal/: CMakeLists.txt  dense_inference.cpp  dense_inference.hpp  mat_to_png.cpp
densecrf/refine_pascal_v4/: dense_inference.cpp  dense_inference.hpp  dense_inference_cpp0x.cpp  dense_inference_cpp11.cpp  dense_inference_cpp11.hpp
densecrf/refine_pascal_v5/: dense_inference.cpp  dense_inference.hpp  dense_inference_cpp0x.hpp
densecrf/util/: bin_processing.hpp
densecrf2/refine_pascal/: CMakeLists.txt  dense_inference.cpp
densecrf2/util/: exception.hpp  mat_processing.hpp
exper/: convert_inference_camvid.sh  convert_inference_pascal.sh  fren.py  iou_camvid.py  iou_pascal.py  mat2png.py  paint_camvid.py  paint_pascal.py  run_camvid_modern.sh  run_densecrf_camvid.sh  run_pascal_modern.sh  run_sbatch.sh
extra/apps/auxiliaries/: CMakeLists.txt  README.md
extra/apps/auxiliaries/include/: utilities.h
extra/apps/auxiliaries/samples/: CMakeLists.txt  video_splitter.cpp
extra/apps/auxiliaries/src/: CMakeLists.txt  utilities.cpp
extra/apps/densecrf2/: CMakeLists.txt  README.md
extra/apps/densecrf2/include/: bin_processing.hpp  find_files.hpp  mat_processing.hpp
extra/apps/densecrf2/libDenseCRF/: CMakeLists.txt
extra/apps/densecrf2/refine_pascal/: CMakeLists.txt  dense_inference.cpp
extra/apps/densecrf2/util/: CMakeLists.txt  bin_processing.hpp  find_files.cpp
extra/apps/inference_converter/: CMakeLists.txt
extra/apps/inference_converter/include/: mat_processing.hpp  pascal_processing.hpp
extra/apps/inference_converter/src/: CMakeLists.txt  bin_processing.hpp  mat_processing.hpp  pascal_processing.cpp  pascal_processing.hpp
extra/apps/inference_converter/tools/: CMakeLists.txt  mat_to_png.cpp
extra/apps/inference_converter/util/: CMakeLists.txt  exception.hpp  find_files.cpp  find_files.hpp  mat_processing.hpp
extra/apps/movie_maker/: CMakeLists.txt  README.md  main.cpp
extra/apps/movie_maker/include/: exception.hpp  movie_maker.hpp  utilities.hpp
extra/apps/movie_maker/samples/: CMakeLists.txt  main.cpp  segm_video_maker.cpp  video_maker.cpp
extra/apps/movie_maker/src/: CMakeLists.txt  movie_maker.cpp  utilities.cpp
extra/scripts/: blobmat2png.m  create_list.sh  cropImages.m  deeplab_build.sh  deeplab_install.sh  denseCRF_build.sh  densecrf_bin2png.py  densecrfbin2png.m  deploy.sh  jpeg2ppm.m  jpg2ppm.m  loadbin.m  paint_pascal.py  resize_images.sh  run_densecrf.sh  run_densecrf_sbatch.sh  run_pascal.sh  run_pascal_sbatch.sh  segmentation_accuracy.py  voc2gt.m
include/caffe/: blob.hpp  data_transformer.hpp
include/caffe/layers/: densecrf_layer.hpp  image_dim_prefetching_data_layer.hpp  image_seg_data_layer.hpp  interp_layer.hpp  mat_write_layer.hpp  multi_stage_meanfield_layer.hpp  seg_accuracy_layer.hpp
include/caffe/util/: confusion_matrix.hpp  densecrf_util.hpp  device_alternate.hpp  hash_table.hpp  interp.hpp  io.hpp  modified_permutohedral.hpp  permutohedral.hpp
matlab/my_script/: EvalSegResults.m  GetVOCopts.m  MyVOCevalseg.m  SetupEnv.m  blobmat2png.m  cropImages.m  densecrfbin2png.m  jpeg2ppm.m
models/deeplab/msc_largefov/: solver.prototxt  solver2.prototxt  test.prototxt  train.prototxt
scripts/: deploy.sh
src/caffe/: CMakeLists.txt  blob.cpp  data_transformer.cpp
src/caffe/layers/: base_data_layer.cpp  base_data_layer.cu  densecrf_layer.cpp  image_dim_prefetching_data_layer.cpp  image_dim_prefetching_data_layer.cu  image_seg_data_layer.cpp  interp_layer.cpp  mat_write_layer.cpp  meanfield_iteration-hyenal.cpp  meanfield_iteration-hyenal.cu  multi_stage_meanfield-hyenal.cpp  multi_stage_meanfield-hyenal.cu  seg_accuracy_layer.cpp
src/caffe/proto/: CMakeLists.txt  caffe.proto
src/caffe/util/: blocking_queue.cpp  confusion_matrix.cpp  densecrf_pairwise.cpp  hash_helper.cu  interp.cpp  interp.cu  io.cpp  modified_permutohedral.cpp  permutohedral.cpp
